[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwtm_cron"
version = "0.0.1"
authors = [
  { name="Samuel Wyatt", email="swyatt@arizona.edu" },
]
description = "A python gcn-kafka alert listener for the Gravitational Wave Treasure Map"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
